--- a/frontend/config.yml
+++ b/frontend/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://khloe-zhang.github.io/ # 绑定的域名
+baseURL: https://bearlybear.com/ # 绑定的域名
 languageCode: zh # en-us
 title: Bear's Blog
 theme: hugo-PaperMod  # 主题名字，和themes文件夹下的一致
