--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Upload to S3
         run: |
-          aws s3 sync public/ s3://${{ secrets.S3_BUCKET }} --delete
+          aws s3 sync frontend/public/ s3://${{ secrets.S3_BUCKET }} --delete
 
       - name: (Optional) Invalidate CloudFront cache
         run: |
