--- a/frontend/config.yml
+++ b/frontend/config.yml
@@ -183,8 +183,8 @@ params:
 
   # twikoo评论
   twikoo:
-    version: 1.5.8 # 填写twikoo版本号
-    id:  # 填写自己的twikoo id
+    version: 1.6.44 # 填写twikoo版本号
+    id:  https://twikoo.bearlybear.com # 填写自己的twikoo id
     region:  # 环境地域，默认为 ap-shanghai，如果您的环境地域不是上海，需传此参数，请看twikoo官方文档
 
 taxonomies:
