--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,10 @@ jobs:
 
       - name: Upload to S3
         run: |
-          aws s3 sync frontend/public/ s3://${{ secrets.S3_BUCKET }} --delete
+          aws s3 sync frontend/public/ s3://${{ secrets.S3_BUCKET }} \
+          --cache-control "public, max-age=86400, must-revalidate" \
+          --delete
 
-      - name: (Optional) Invalidate CloudFront cache
+      - name: Invalidate CloudFront cache
         run: |
           aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
