--- a/frontend/config.yml
+++ b/frontend/config.yml
@@ -211,6 +211,7 @@ markup:
     # lineNos：是否显示行号，我比较喜欢显示，所以我设置的为 true.
     # lineNumbersInTable：使用表来格式化行号和代码,而不是 标签。这个属性一般设置为 true.
     # noClasses：使用 class 标签，而不是内嵌的内联样式
+    # 更多关于高亮的配置参考这篇 https://gohugo.io/content-management/syntax-highlighting/#highlight-shortcode
 
 privacy:
   vimeo:
